# desafio-eject-squad-01-backend

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
about_us/: apps.py  models.py  urls.py  views.py
about_us/templates/blog/: post-detail.html
about_us/templates/blog/partials/: _post-card.html
app/: urls.py  views.py
app/static/app/styles/: home.css
app/templates/app/: home.html
blog/: admin.py  models.py  urls.py  utrls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/styles/: home.css
blog/templates/blog/: blog.html  home.html  post-detail.html
blog/templates/blog/article/: article-detail.html
blog/templates/blog/partials/: _post-card.html
core/: settings.py  urls.py
global/static/global/scripts/: reservation-modal.js  toast-messages.js
global/static/global/styles/: base.css  footer.css  navbar.css  reservation-modal.css  toast-messages.css
global/templates/global/layout/: base.html
global/templates/global/partials/: _footer.html  _navbar.html  _reservation_modal.html  _toast-message.html
home/: apps.py  models.py  urls.py  views.py
home/templates/: index.html
home/templates/website/: about-us.html  article-detail.html  blog.html
reservations/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
site_cliente/: asgi.py  settings.py  urls.py  wsgi.py
website/: urls.py  views.py
website/static/website/styles/: home.css
website/templates/website/: home.html
