[project]
name = "desafio-eject-squad-01-backend"
version = "0.1.0"
description = "Back-end do desafio técnico do Squad 1."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["django>=6.0.4", "django-environ>=0.13.0"]

[dependency-groups]
dev = ["djlint>=1.36.4", "ruff>=0.15.9"]

[tool.ruff.lint]
ignore = ["F401"]
